fix(relay): 🐛 Discover private relays over pubsub
