# src/apps/apis/nodes-api/swagger.yaml
@@ -396,6 +396,10 @@ components:
                     type: string
                 lastProviderLookupMultiaddrCount:
                   type: number
+                lastPubSubPublishedAt:
+                  type: number
+                lastPubSubReceivedAt:
+                  type: number
                 lastRequestedNetworkCount:
                   type: number
                 privateNetworkCount:
